--- a/WhatTheHelmRuntime/Properties/Resources.resx
+++ b/WhatTheHelmRuntime/Properties/Resources.resx
@@ -133,8 +133,8 @@
   <data name="Blower_Off" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Blower_Off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Blower_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Blower_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bilge_Pump_2_Auto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bilge_Pump_2_Auto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="BlackButtonGear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BlackButtonGear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,8 +154,8 @@
   <data name="BlackButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BlackButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bilge_Pump_2_Auto" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bilge_Pump_2_Auto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Blower_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Blower_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Port_Wiper_Off" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Port_Wiper_Off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,11 +199,20 @@
   <data name="Port_Wiper_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Port_Wiper_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bow_Up_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bow_Up_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="trawler" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trawler.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Windlass_In_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Windlass_In_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bilge_Pump_2_Manual" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bilge_Pump_2_Manual.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bow_Down_Off" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bow_Down_Off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="WhatTheHelmLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WhatTheHelmLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,10 +220,13 @@
   <data name="TF014" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TF014.WAV;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Bow_Up_Off" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bow_Up_Off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Bilge_Pump_1_Manual" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bilge_Pump_1_Manual.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bilge_Pump_2_Manual" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bilge_Pump_2_Manual.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bow_Down_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bow_Down_On.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
